--- a/page5.html
+++ b/page5.html
@@ -64,7 +64,9 @@
                     <a class="iconfont-wrapper" href="https://www.youtube.com/channel/UC4kNtRiuZdtUU26ieBD97bw" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-youtube socicon"></span>
                     </a>
-                    
+                    <a class="iconfont-wrapper" href="https://twitter.com/JLFilmFoto" target="_blank">
+                        <span class="p-2 mbr-iconfont socicon-twitter socicon"></span>
+                    </a>
                     
                 </div>
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://jantethedog.github.io/jlfilmundfoto/">Startseite</a></div>
@@ -99,7 +101,7 @@
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://jantethedog.github.io/jlfilmundfoto/" target="_blank">
+                        <a href="https://twitter.com/JLFilmFoto" target="_blank">
                             <span class="mbr-iconfont socicon-twitter socicon" style="color: rgb(34, 165, 229); fill: rgb(34, 165, 229);"></span>
                         </a>
                     </div>
@@ -217,6 +219,10 @@
                         <a href="https://www.youtube.com/channel/UC4kNtRiuZdtUU26ieBD97bw" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon"></span>
                         </a>
+                    </div><div class="soc-item">
+                        <a href="https://twitter.com/JLFilmFoto" target="_blank">
+                            <span class="mbr-iconfont mbr-iconfont-social socicon-twitter socicon"></span>
+                        </a>
                     </div></div>
             </div>
             <div class="row row-copirayt">
@@ -226,7 +232,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2796769" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/website-maker.html">Free Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2796769" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
