--- a/page7.html
+++ b/page7.html
@@ -311,7 +311,7 @@
                                 </div>
                             </div>
                             <div class="item-content">
-                                <h5 class="item-title mbr-fonts-style display-7"><strong>Portaraits</strong></h5>
+                                <h5 class="item-title mbr-fonts-style display-7"><strong>Portraits</strong></h5>
                                 
                                 <p class="mbr-text mbr-fonts-style mt-3 display-7">You don't have to code to create your own
                                     site. Select one of available themes in the Mobirise Site Maker.</p>
