--- a/home.html
+++ b/home.html
@@ -275,9 +275,7 @@
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2022 Jan Lukas Lindner. All Rights Reserved.
-                </p>
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7"></p>
             </div>
         </div>
     </div>
