--- a/page3.html
+++ b/page3.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="">
   <meta name="twitter:title" content="Impressum">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/jl-film-foto-wei-10k-schwarz-140x96.png" type="image/x-icon">
   <meta name="description" content="">
   
   
@@ -141,9 +141,7 @@
                     </div></div>
             </div>
             <div class="row row-copirayt">
-                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2022 Jan Lukas Lindner. All Rights Reserved.
-                </p>
+                <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7"></p>
             </div>
         </div>
     </div>
